Fix detail pages alignment

--- a/_source/stylesheets/components/_h-entry.scss
+++ b/_source/stylesheets/components/_h-entry.scss
@@ -4,21 +4,18 @@
 .h-entry {
 	max-width: $max-width;
 
-	padding: gutter();
 	margin-right: auto;
 	margin-bottom: span(1);
 	margin-left: auto;
 
 	@include media('>=8col') {
 		@include table-layout-wrapper {
-			border-spacing: gutter();
 
 			border-collapse: separate;
 		}
 
 		width: 100%;
 
-		padding: 0;
 	}
 
 	.grid & {
@@ -51,10 +48,6 @@
 	}
 }
 
-.h-entry__e-content header {
-	padding-right: gutter();
-	padding-left: gutter();
-}
 
 // when the entry was published
 .h-entry__dt-published {
@@ -163,10 +156,10 @@
 	border-top: 1px solid palette('border');
 
 	@include media('>=8col') {
-		@include fallback('width', calc(#{span(3) + gutter() / 2}), span(3));
 		@include table-layout-item;
+		@include fallback('padding-left', calc(#{gutter() / 2em * 1rem} - 1px), 11px);
 
-		padding-left: gutter() / 2;
+		width: (span(3) + gutter() / 2) / 1em * 1rem;
 
 		border-top: 0;
 		border-left: 1px solid palette('border');
